infra/kubernetes/mqtt/01-mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: agrotech
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"    # <--- Garante SSL rápido
            memory: "512Mi" # <--- Buffer de segurança
        ports:
        - containerPort: 1883
        - containerPort: 9001
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
        - name: data
          mountPath: /mosquitto/data/
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-svc
  namespace: agrotech
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
    nodePort: 31883 # <--- PORTA FIXA HAProxy
    name: mqtt-tcp
  - port: 9001
    targetPort: 9001
    name: mqtt-ws
